[package]
name = "ioc"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
blake2 = "0.10.6"
chrono = "0.4.24"
clap = { version = "4.1.9", features = ["derive"] }
file-hashing = "0.1.2"
tera = "1.18.1"
users = "0.11.0"
log = "0.4.17"
colored = "2.0.0"
[dependencies.simple_logger]
version = "4.1"
default-features = false
features = ["colors"]
