[package]
name = "ioc"
description = "install ioc definitions"
version = "0.19.5"
authors = ["Niko Kivel <niko.kivel@lightsource.ca>"]
license = "GPLv3"
keywords = ["CLS", "deployment", "ioc", "tools"]
repository = "https://github.lightsource.ca/epics-iocs/ioc/"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
blake2 = "0.10.6"
chrono = "0.4.31"
clap = { version = "4.4.9", features = ["derive"] }
file-hashing = "0.1.2"
tera = "1.18.1"
users = "0.11.0"
log = "0.4.17"
colored = "2.0.0"
config = "0.13.3"
serde = "1.0.159"
serde_derive = "1.0.159"
diffy = "0.3.0"
glob = "0.3.1"
tempfile = "3.6.0"
git2 = "0.17.2"
serde_yaml = "0.9.22"
clap_complete = "4.4.4"
[dependencies.simple_logger]
version = "4.1"
default-features = false
features = ["colors"]
